# flist

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  file_lister.rs  file_version.rs  lib.rs  main.rs  output.rs  version_reader.rs
