[package]
name = "flist"
version = "0.9.0"
authors = ["Mathias Koch"]
edition = "2024"
description = "Search and list files with file version information"
license = "MIT"
repository = "https://github.com/MathiasCodes/flist"
keywords = ["cli", "file-search", "version-info", "pe-parser"]
categories = ["command-line-utilities"]

[lib]
name = "flist"
path = "src/lib.rs"

[[bin]]
name = "flist"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
anyhow = "1.0"
walkdir = "2.5"
pelite = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winver"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
